Fixes map to stretch full browser width

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -17,6 +17,7 @@
   width: 100vw;
   height: 100vh;
   margin: 0;
+  padding: 0;
 }
 
 .control-panel {
